--- a/SupplyChains/main/templates/simulate.html
+++ b/SupplyChains/main/templates/simulate.html
@@ -3,90 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=2048" /> -->
     <title>Simulation_Supply-Chain-1</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/simulation1.css" rel="stylesheet" type="text/css">
-
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/static/css/simulation1.css" rel="stylesheet">
     <script src="/static/js/jscharts.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="/static/js/html5shiv.js"></script>
     <script src="/static/js/respond.js"></script>
     <![endif]-->
     <script>
-        function display(){
-            var el=document.getElementById("time");
-            var time=new Date();
-            el.innerHTML=time.toLocaleDateString()+" "+time.toLocaleTimeString();
-            setTimeout(displayTime,1000);
+        function displayTime() {
+            var el = document.getElementById("time");
+            var time = new Date();
+            el.innerHTML = time.toLocaleDateString() + " " + time.toLocaleTimeString();
+            setTimeout(displayTime, 1000);
 
 //            var dis_tpDCUS=document.getElementById("dis_transDC2US");
 //            var dis_tpDCEU=document.getElementById("dis_transDC2EU");
-//            var dis_tpUSEU=document.getElementById("dis_transUS2EU");
-//            var dis_tpEUUS=document.getElementById("dis_transEU2US");
-//            var input_transDC2US=document.getElementById("DCUS");
-//            var input_transDC2EU=document.getElementById("DCEU");
-//            var input_transUS2EU=document.getElementById("USEU");
-//            var input_transEU2US=document.getElementById("EUUS");
-//            dis_tpDCUS.innerHTML=eval(input_transDC2US).value;
-//            dis_tpDCEU.innerHTML=eval(input_transDC2EU).value;
-//            dis_tpUSEU.innerHTML=eval(input_transUS2EU).value;
-//            dis_tpEUUS.innerHTML=eval(input_transEU2US).value;
+//
+//            var dis_DCUSInv=document.getElementById("dis_inventoryDC_US");
+//            var dis_DCEUInv=document.getElementById("dis_inventoryDC_EU");
+//
+//            dis_tpDCUS.innerHTML=dis_DCUSInv.innerHTML;
+//            dis_tpDCEU.innerHTML=dis_DCEUInv.innerHTML;
         }
-        window.onload=display;
+        window.onload = displayTime;
     </script>
 
 
 </head>
 <body>
-<span id="time"></span>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-6">
-            <div class="col-sm-2">
-                <a href="/accounts/logout/" class="btn btn-info" role="button">Log Out</a>
-            </div>
-            <div class="col-sm-2">
-                <a href="/" class="btn btn-info" role="button">Choose Chains</a>
-            </div>
-        </div>
-    </div>
+<!--navigation bar-->
+<div class="navbar">
+<ul style="list-style-type:none;">
+    {% if user.is_authenticated %}
+    <li style="display:inline;"> Welcome {{ user.username }}!</li>
+    {% else %}
+    <li> Welcome </li>
+    {% endif %}
+    <li style="display:inline;" id="time"></li>
+   
+    <li style="display:inline;float:right;">
+        <div class="navbtn"><a href="/accounts/logout/" class="btn btn-info" role="button">Log Out</a><div>
+    </li>
+     <li style="display:inline; float:right;">
+        <div class="navbtn"><a href="/" class="btn btn-info" role="button">Choose Chains</a></div>
+    </li>
+</ul>
 </div>
+
+
 <!--Simulation Page-->
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8 text-center">
-            <h2>Chain 1 Manage Simulation</h2>
-            <div class="well well-lg text-info head-desc">Supply Chain 1: the product is produced in the plant, then shipped to DC, then the inventory is split to US and EU, then each shipped to transport, and then each arrive to US and EU warehouses. Inventory at US/EU warehouses can also be transshipped to EU/US.</div>
+<div class="content">
+
+<!--information description-->
+<div class="head-info">
+        <div class="well well-lg text-info head-desc" style="float:left">
+            <h3>Supply Chain 1 Manage Simulation</h3>
+            <p>Supply Chain 1: the product is produced in the plant, then shipped to DC, then the inventory is split to US and EU, then each shipped to transport, and then each arrive to US and EU warehouses. Inventory at US/EU warehouses can also be transshipped to EU/US.</p>
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#attributeinfo" style="float:right"> View Attribute</button>
         </div>
-        <div class="col-sm-4 text-center" style="margin-top: 130px">
-            Click <a href="/attribute.xlsx">here</a> to review system's attributes.
+       
+  <!-- Modal -->
+  
+        
+        <div class="modal fade" id="attributeinfo" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Supply Chain 1 Attributes Information</h4>
+                    </div>
+
+                    <div class="modal-body">
+
+                            
+                             <table id="attribute-info" style="width:100%">
+                             <tr>
+                                <td></td>
+                                <td colspan="2"> Production Cost </td>
+                                <td colspan="2"> Selling Price(Same w/wo UPS) </td>
+                                <td></td>
+                                <td></td>
+                             </tr>
+                             <tr>
+                                <td>Total Periods(N)</td>
+                                <td>With UPS</td>
+                                <td>Without UPS</td>
+                                <td>US(USD)</td>
+                                <td>Europe(EURO)</td>
+                                <td>Transship(USD)</td>
+                                <td>Interest Rate(r)</td>
+                             </tr>
+                             <tr>
+                                <td class="value">15</td>
+                                <td class="value">110</td>
+                                <td class="value">100</td>
+                                <td class="value">30</td>
+                                <td class="value">30</td>
+                                <td class="value">2</td>
+                                <td class="value">0.5%</td>
+                             </tr>
+                             </table>
+                        
+                        
+                    </div>
+                    
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"> Close</button>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
-    </div>
+        
+
+         
 </div>
 
-<!--Create the Main Page-->
+
+<div class="row">
+
+    <div class="col-sm-2 col-sm-offset-8">
+        <div class="text-center" style="font-size:20px"><label>US</label></div>
+    </div>
+</div>
 
 <div class="row">
 
     <div class="col-sm-2 col-sm-offset-5">
-        <img src="/static/img/ship.jpg" class="img-responsive center-block">
-        <div class="panel panel-primary trans-cus">
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading"><h3 class="panel-title">Transport</h3></div>
             <div class="panel-body">
                 <label class="control-label dis_transDC2US" id="dis_transDC2US">{{ transDCUS }}</label>
             </div>
         </div>
+        <img src="/static/img/ship.jpg" class="img-responsive" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
+        <label for="DCUS" class="control-label">Input Allocation for US:</label>
+        <input type="text" class="form-control" id="DCUS" name="DCUS" placeholder="Allocation for US" form="inputform" required autofocus>
     </div>
-    <div class="col-sm-1" style="margin-top: 30px">
-        <img src="/static/img/arrow.jpg" class="img-responsive">
-    </div>'
+
+    <div class="col-sm-1">
+        <img class="img-responsive" src="/static/img/arrow.jpg" style="margin-top:50%;">
+    </div>
+
     <div class="col-sm-2">
-        <div class="text-center"><label>US</label></div>
-        <img src="/static/img/demand.jpg" class="img-responsive center-block">
-        <div class="panel panel-primary">
+       <!--  <table>
+        <tr>
+         <td id="output">
+         <ul style="list-style-type:none;float:left">
+            <li class="upperlabel">Sales</li>
+            <li class="field-multi-left">
+             <label class="dis_label" id="dis_saleUS">{{ SalesUS }}</label>
+             
+            </li>
+        </ul>
+        <ul style="list-style-type:none">
+            <li class="upperlabel">Demand</li>
+            <li class="field-multi-right">
+             <label class="dis_label" id="dis_inventoryUS">{{ USInv }}</label>     
+            </li>
+        </ul>
+        </td>
+        </tr>
+        </table> -->
+
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading"><h3 class="panel-title">Inventory</h3></div>
             <div class="panel-body">
                 <form role="form" id="form_transUS2EU">
@@ -94,9 +181,13 @@
                 </form>
             </div>
         </div>
+        <img src="/static/img/demand.jpg" class="img-responsive" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
+        <label for="USEU" class="control-label">Input US to EU:</label>
+        <input type="text" class="form-control" id="USEU" name="USEU" placeholder="Transport of US to EU" form="inputform" required autofocus>
     </div>
+
     <div class="col-sm-2">
-        <div class="panel panel-primary">
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading">
                 <h3 class="panel-title">Sale of US</h3>
             </div>
@@ -106,26 +197,55 @@
         </div>
     </div>
 </div>
+
 <div class="row">
-    <div class="col-sm-1 col-sm-offset-8">
+    <div class="col-sm-1 col-sm-offset-5">
+        <img class="img-responsive" src="/static/img/arrow_-45.jpg">
+    </div>
+    <div class="col-sm-1 col-sm-offset-2">
         <img class="img-responsive" src="/static/img/arrow_135.jpg">
     </div>
     <div class="col-sm-1">
         <img class="img-responsive" src="/static/img/arrow_-135.jpg">
     </div>
 </div>
+
 <div class="row">
+
     <div class="col-sm-2">
-        <div class="text-center"><label class="dis_name">Plant</label></div>
-        <img class="img-responsive" src="/static/img/factory.png">
+        <div class="panel panel-primary" style="max-height:90px;">
+            <div class="panel-heading"><h3 class="panel-title">Plant</h3></div>
+        </div>
+
+        <!--
+        <div class="text-center" style="font-size:20px;"><label class="dis_name">Plant</label></div>
+        -->
+
+        <img class="img-responsive" src="/static/img/factory.png" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
+        <label for="Prod" class="control-label">Input Production:</label>
+        <input type="text" class="form-control" id="Prod" name="Prod" placeholder="Prod" form="inputform" required autofocus>
     </div>
+
     <div class="col-sm-1">
-        <img class="img-responsive" style="margin-top: 120px" src="/static/img/arrow.jpg">
+        <img class="img-responsive" style="margin-top:50%" src="/static/img/arrow.jpg">
     </div>
+
     <div class="col-sm-2">
-        <div class="text-center"><label class="dis_name">DC</label></div>
-        <img class="img-responsive" style="margin-top: 30px" src="/static/img/Simulation-DC.jpg">
+        <div class="panel panel-primary" style="max-height:90px;">
+            <div class="panel-heading panelhead-cus">DC Inventory</div>
+            <div class="panel-body panel-text">
+                <label class="dis_label" id="dis_inventoryDC">{{ DCInv }}</label>
+            </div>
+        </div>
+
+        <!--
+        <div class="text-center" style="font-size:20px;"><label class="dis_name">DC</label></div>
+        -->
+
+        <img class="img-responsive" src="/static/img/Simulation-DC.jpg" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
     </div>
+
+    <!--
     <div class="col-sm-1" style="margin-top: 50px">
         <div class="panel panel-primary">
             <div class="panel-heading panelhead-cus">Inventory</div>
@@ -134,34 +254,35 @@
             </div>
         </div>
     </div>
+    -->
 
-    <div class="col-sm-1">
-        <img class="img-responsive ship_cus" src="/static/img/ship.jpg">
-    </div>
-    <div class="col-sm-2">
-        <div class="panel panel-primary panel-cus">
+    <div class="col-sm-2 col-sm-offset-2">
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading panelhead-cus text-center">Transport</div>
             <div class="panel-body">
                 <label class="dis_label" id="dis_transUS2EU">{{ transUSEU }}</label>
             </div>
         </div>
+        <img class="img-responsive" src="/static/img/ship.jpg" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
     </div>
-    <div class="col-sm-1">
-        <img class="img-responsive ship_cus" src="/static/img/ship.jpg">
-    </div>
+
     <div class="col-sm-2">
-        <div class="panel panel-primary panel-cus">
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading panelhead-cus text-center">Transport</div>
             <div class="panel-body">
                 <label class="dis_label" id="dis_transEU2US">{{ transEUUS }}</label>
             </div>
         </div>
+        <img class="img-responsive" src="/static/img/ship.jpg" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
     </div>
 
 </div>
 
 <div class="row">
-    <div class="col-sm-1 col-sm-offset-8">
+    <div class="col-sm-1 col-sm-offset-5">
+        <img class="img-responsive" src="/static/img/arrow_45.jpg">
+    </div>
+    <div class="col-sm-1 col-sm-offset-2">
         <img class="img-responsive" src="/static/img/arrow_45.jpg">
     </div>
     <div class="col-sm-1">
@@ -170,51 +291,68 @@
 </div>
 
 <div class="row">
+
     <div class="col-sm-2 col-sm-offset-5">
-        <img src="/static/img/ship.jpg" class="img-responsive center-block">
-        <div class="panel panel-primary trans-cus">
+        <div class="panel panel-primary" style="max-height:90px;">
             <div class="panel-heading"><h3 class="panel-title">Transport</h3></div>
             <div class="panel-body">
                 <label class="control-label dis_transDC2US" id="dis_transDC2EU">{{ transDCEU }}</label>
             </div>
         </div>
+        <img src="/static/img/ship.jpg" class="img-responsive" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
+        <label for="DCEU" class="control-label">Input Allocation for EU:</label>
+        <input type="text" class="form-control" id="DCEU" name="DCEU" placeholder="Allocation for EU" form="inputform" required autofocus>
     </div>
-    <div class="col-sm-1" style="margin-top: 30px">
-        <img src="/static/img/arrow.jpg" class="img-responsive">
+
+    <div class="col-sm-1">
+        <img src="/static/img/arrow.jpg" class="img-responsive" style="margin-top:50%">
     </div>'
+
     <div class="col-sm-2">
-        <div class="text-center"><label>EU</label></div>
-        <img src="/static/img/demand.jpg" class="img-responsive center-block">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><h3 class="panel-title">Tranship&nbsp;&nbsp;&nbsp;Inventory</h3></div>
+        <div class="panel panel-primary" style="max-height:90px;">
+            <div class="panel-heading"><h3 class="panel-title">Tranship Inventory</h3></div>
             <div class="panel-body">
                 <label class="control-label dis_label" id="dis_inventoryEU">{{ EUInv }}</label>
             </div>
         </div>
+        <img src="/static/img/demand.jpg" class="img-responsive" style="width:100%;max-width:200px;margin:5px auto 5px auto;">
+        <label for="EUUS" class="control-label">Input EU to US:</label>
+        <input type="text" class="form-control" id="EUUS" name="EUUS" placeholder="Transport of EU to US" form="inputform" required autofocus>
     </div>
+
+
     <div class="col-sm-2">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Sale of EU</h3>
-            </div>
+        <div class="panel panel-primary" style="max-height:90px;">
+            <div class="panel-heading"><h3 class="panel-title">Sale of EU</h3></div>
             <div class="panel-body">
                 <label class="dis_label" id="dis_saleEU">{{ SalesEU }}</label>
             </div>
         </div>
     </div>
+
 </div>
+
+<div class="row">
+    <div class="col-sm-2 col-sm-offset-8">
+        <div class="text-center" style="font-size:20px"><label>EU</label></div>
+    </div>
+</div>
+
 
 {% if form_disp %}
 <!--Create Input Form-->
+
 <div class="row">
     <div class="col-sm-11 col-sm-offset-1">
-        <form class="form-horizontal" action="/simulate/?now={{ now }}" method="post">{% csrf_token %}
+        <form class="form-horizontal" action="/simulate/?now={{ now }}" method="post" id="inputform">{% csrf_token %}
+<!--
             <div class="form-group">
                 <label for="Prod" class="col-sm-2 control-label">Input Production:</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" id="Prod" name="Prod" placeholder="Prod" required autofocus>
                 </div>
             </div>
+
             <div class="form-group">
                 <label for="DCUS" class="col-sm-2 control-label">Input Allocation for US:</label>
                 <div class="col-sm-8">
@@ -239,10 +377,11 @@
                     <input type="text" class="form-control" id="EUUS" name="EUUS" placeholder="Transport of EU to US" required autofocus>
                 </div>
             </div>
+-->
             <input type="hidden" name="now" value="{{ now }}"/>
             <div class="form-group">
-                <div class="col-sm-3 col-sm-offset-2">
-                    <input type="submit" class="btn btn-block btn-info btn-lg run-cus" value="RUN">
+                <div class="col-sm-3 col-sm-offset-2" style="float:right">
+                    <input type="submit" class="btn btn-block btn-info btn-lg run-cus" style="float:right;" value="RUN">
                 </div>
             </div>
         </form>
@@ -309,7 +448,6 @@
 <!--jQuery and Bootstrap-->
 <script src="/static/js/jquery-1.11.3.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
-<!--<script src="/static/js/simuchain1_run.js"></script>-->
-
+<!--<script src="/static/js/simuchain2_run.js"></script>-->
 </body>
 </html>
