--- a/SupplyChains/static/css/simulation1.css
+++ b/SupplyChains/static/css/simulation1.css
@@ -2,7 +2,63 @@ body {
     padding: 30px;
     margin: 0 auto;
     background-color: #FFF;
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
 }
+.navbtn{
+   padding-right:10px;
+}
+
+
+.head-info{
+    width:100%;
+    height:230px;s
+}
+.head-info ul{
+    list-style-type: none;
+}
+.head-info li{
+    display:inline;
+}
+
+.head-info h3{
+    text-align:center;
+    margin-top:5px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+.head-info h2{
+    font-family: FontAwesome,Sans-serif;
+    margin-left: 10%;
+}
+.head-desc {
+    /*font-family: FontAwesome,Sans-serif;*/
+    color:black;
+    font-size: 16px;
+    width:100%;
+    padding-top: 2%;
+    
+}
+
+table#attribute-info {
+   /* border-top:1px solid black;*/
+    font-size: 13px;
+}
+table#attribute-info tr td {
+     border:1px solid black;
+    text-align:center;
+    background-color: #337ab7;
+    color:white;
+  
+}
+table#attribute-info .value {
+    background-color: white;
+    color:black;
+    border-bottom:1px solid white;
+    border-left:1px solid white;
+    border-right:1px solid white;
+}
+
 .table-cus {
     font-size: 13px;
     font-family: cursive;
@@ -12,11 +68,11 @@ body {
 
 }
 
-.head-desc {
+/*.head-desc {
     font-family: FontAwesome,serif;
     font-size: 16px;
     padding: 50px;
-}
+}*/
 
 .trans-cus {
     margin-top: 10px;
