--- a/SupplyChains/static/css/simulation2.css
+++ b/SupplyChains/static/css/simulation2.css
@@ -2,7 +2,132 @@ body {
     padding: 30px;
     margin: 0 auto;
     background-color: #FFF;
+    display:block;
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
+
 }
+
+.h2{
+    text-align: center;
+}
+
+.navbtn{
+   padding-right:10px;
+}
+
+.head-info{
+    width:100%;
+    height:230px;s
+}
+.head-info ul{
+    list-style-type: none;
+}
+.head-info li{
+    display:inline;
+}
+
+.head-info h3{
+    text-align:center;
+    margin-top:5px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+.head-info h2{
+    font-family: FontAwesome,Sans-serif;
+    margin-left: 10%;
+}
+
+.head-desc {
+    /*font-family: FontAwesome,Sans-serif;*/
+    color:black;
+    font-size: 16px;
+    width:100%;
+    padding-top: 2%;
+}
+
+table#attribute-info {
+   /* border-top:1px solid black;*/
+    font-size: 13px;
+}
+table#attribute-info tr td {
+     border:1px solid black;
+    text-align:center;
+    background-color: #337ab7;
+    color:white;
+  
+}
+table#attribute-info .value {
+    background-color: white;
+    color:black;
+    border-bottom:1px solid white;
+    border-left:1px solid white;
+    border-right:1px solid white;
+}
+table#graphicdisplay{
+   /*table-layout: fixed;*/
+    width:100%;
+    padding:10%;
+    margin-top:5%;
+    text-align: center;
+
+} 
+table#graphicdisplay tr{
+    width:100%;
+
+}
+td#place{
+    width:17%;
+    padding-left: 3%;
+}
+td#arrow{
+    width:6%;
+}
+td#place img{
+    width: 80%;
+    padding-left:10%;
+}
+td#arrow img{
+    width: 100%;
+    padding-right:25%;
+}
+
+td#place{
+    font-weight: bold;
+}
+td#arrow{
+    font-weight: bold;
+}
+
+td#output li{
+    border:1px solid #337ab7;
+    font-weight: bold;
+    padding:10px;
+}
+td#output .upperlabel{
+    height:10%;
+    color:white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color:#337ab7;
+}
+td#output .field{
+    border-bottom-left-radius:5px;
+    border-bottom-right-radius:5px;
+}
+td#output .field-multi-left{
+    border-bottom-left-radius:5px;
+}
+td#output .field-multi-right{
+    border-bottom-right-radius:5px;
+}
+td#input .upperlabel{
+    font-weight: bold;
+    margin-bottom:10px;
+}
+td#input .field{
+    padding-left:30px;
+}
+
 .table-cus {
     font-size: 13px;
     font-family: cursive;
@@ -12,11 +137,7 @@ body {
 
 }
 
-.head-desc {
-    font-family: FontAwesome,serif;
-    font-size: 16px;
-    padding: 50px;
-}
+
 
 .trans-cus {
     margin-top: 10px;
