--- a/SupplyChains/main/templates/registration/login.html
+++ b/SupplyChains/main/templates/registration/login.html
@@ -23,7 +23,7 @@
         <p class="error">Sorry, username and password do not match.</p>
     {% endif %}
     <form class="form-signin" name="form-login" method="post" action="">{% csrf_token %}
-        <h2 class="form-signin-heading">Please Sign In</h2>
+        <h3 class="form-signin-heading">Welcome ! Please Sign In</h3>
         <label for="username" class="sr-only">User Name</label>
         <input type="text" id="username" class="form-control" name="username" placeholder="User Name" required
                autofocus>
@@ -32,10 +32,10 @@
 
         <div class="checkbox">
             {#            <label><input type="checkbox" value="remember-me">Remember Me</label>#}
-            <label><a href="/accounts/register/" target="_blank">Register Account</a></label>
+            <label><a href="/accounts/register/" target="_blank" style="color:#bbb">Register New Account</a></label>
         </div>
         <input type="hidden" name="next" value="{{ next|escape }}"/>
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Log In">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Log In" style="background-color: #1abc9c; border-color: #1abc9c;">
     </form>
 </div>
 
