--- a/SupplyChains/main/templates/registration/register.html
+++ b/SupplyChains/main/templates/registration/register.html
@@ -42,9 +42,9 @@
         <!--</div>-->
 
         <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-9">
-                <input class="btn btn-lg btn-primary" type="submit" value="Register">
-            </div>
+            <!-- <div class="col-sm-offset-3 col-sm-9"> -->
+                <input class="btn btn-lg btn-primary" type="submit" value="Register" style="background-color: #1abc9c; border-color: #1abc9c; width:100%">
+            <!-- </div> -->
         </div>
 
     </form>
