--- a/SupplyChains/static/css/choose.css
+++ b/SupplyChains/static/css/choose.css
@@ -1,14 +1,71 @@
 body {
-    padding-top: 50px;
     background-color: #eee;
+    font-family: Lato,Helvetica,Arial,sans-serif;
+}
+
+
+img{
+    max-width:90%;
+    max-height: 90%;
+    
+}
+
+.helptext{
+    font-size:15px;
+    color:#D1F2EB;
+    padding-left: 20px;
+    text-align: left;
+
+
+}
+.customizednavbar{
+    background-color: #2f4154; 
+    height:52px;
+    color:#ccc;
+    font-size:20px;
+    padding-top:10px;
+
+}
+.navbtn{
+    padding-right: 10px;
+}
+.btn{
+    background-color: #1abc9c; 
+    border-color: #1abc9c; 
+
 }
 .chooseHead {
     padding: 40px 15px;
     text-align: center;
     margin: 0 auto;
 }
+
 .chooseButtons {
-    margin: 70px auto;
+    margin: 50px;
+    margin-right: 50px;
+    width:30%;
+    height:300px;
+    border-radius: 8px;
+    display: inline-block;
+    transition: all .5s ease-in-out;
+  
+}
+.chooseButtons:hover{
+    transform:scale(1.05);
+}
+.upper{
+    background-color: #1ABC9C;
+    height: 75%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+
+}
+.lower{
+    background-color:#16A085;
+    height: 25%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding-top: 10px;
 }
 .btn-cus {
     padding: 25px 40px;
