--- a/SupplyChains/static/css/login.css
+++ b/SupplyChains/static/css/login.css
@@ -1,17 +1,21 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  /*background-color: #eee;*/
+  background-color:#1abc9c;
 }
 .form-signin {
-  max-width: 330px;
+  max-width: 400px;
   padding: 15px;
   margin: 0 auto;
+  background-color: #edeff1;
+  border-radius: 6px;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+ 
 }
 .form-signin .checkbox {
   font-weight: normal;
@@ -22,19 +26,23 @@ body {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 10px;
+  padding: 13px;
   font-size: 16px;
+  text-indent: 3px;
+  border: 2px solid #edeff1;
+  border-radius: 6px;
+
 }
 .form-signin .form-control:focus {
   z-index: 2;
 }
 .form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  margin-bottom: 10px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 .form-signin input[type="password"] {
   margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
