--- a/SupplyChains/static/css/simulation2.css
+++ b/SupplyChains/static/css/simulation2.css
@@ -1,11 +1,32 @@
 body {
-    padding: 30px;
+    /*padding: 30px;*/
     margin: 0 auto;
     background-color: #FFF;
     display:block;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
 
 }
+
+.customizednavbar{
+    background-color: #2f4154;
+    height: 52px;
+    color: #ccc;
+    font-size: 20px;
+    padding-top: 10px;
+}
+.info-table{
+    padding-left: 30px;
+    padding-right:30px;
+}
+.row{
+    padding-left: 30px;
+    padding-right:30px;
+}
+.btn{
+    background-color: #1abc9c; 
+    border-color: #1abc9c; 
+}
+
 
 .h2{
     text-align: center;
